# agentic_workforce

./: .env.example  LICENSE.md  README.md  Strike_Plan.md  clean_repo_tree.txt  ignite.bat  none_scan.py  omega_fixer.py  page_fixer.py  pyproject.toml  realm_core.py  sovereign_backend_report.json  vercel.json
client/: next.config.ts  package-lock.json  package.json  tsconfig.json
client/app/: Page.tsx  globals.css  layout.tsx  page.tsx
client/components/chambers/: ArsenalManager.tsx  ArtifactStudio.tsx  NeuralLattice.tsx  WarRoom.tsx
docs/file_hygiene/: file_tree.txt  repo_tree.txt  root_repair_log.json  sovereign_repo_report.json
scripts/: repair_paths_and_verify.py  repo_scanner.py
src/: app.py
src/api/dependencies/: security.py
src/api/middleware/: auth_middleware.py
src/api/routes/: agent_routes.py  assistant_routes.py  auth_routes.py  graph_routes.py  io_routes.py  mission_routes.py  stt_routes.py
src/api/schemas/: agent_schema.py  mission_schema.py
src/auth/: gatekeeper.py
src/ingress/: webhook_handler.py
src/memory/: engine.py
src/missions/: mission_engine.py
src/orchestration/: validator.py
src/system/: config.py  connection_manager.py  orchestrator.py  state.py
src/system/agents/: factory.py  loader.py
src/system/arsenal/: cyber_security.py  data_intelligence.py  devops_infrastructure.py  executive_board.py  financial_ops.py  foundation.py  general_engineering.py  legal_compliance.py  registry.py  (+2 more)
src/utils/: id_generator.py  retry_logic.py  text_cleaner.py
tests/: test_auth.py  test_silo_hydration.py  test_tools.py
(+3 files in other folders)
