[tool.poetry]
name = "realm-forge-os"
version = "29.2.0"
description = "Titan-Industrial Agentic Workforce with 13-Silo Architecture"
authors = ["Lead Swarm Engineer"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
python-dotenv = ">=1.0.0"
langchain = ">=0.1.0"
langgraph = ">=0.0.15"
langchain-groq = ">=0.0.1"
langchain-openai = ">=0.0.5"
pydantic = ">=2.5.0"
aiosqlite = ">=0.19.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
chromadb = ">=0.4.20"
networkx = ">=3.1"
httpx = ">=0.26.0"
pandas = "<2.2.0"
numpy = "<2.0.0"
transformers = ">=4.44.0"
torch = ">=2.2.0"
edge-tts = ">=6.1.9"
stripe = ">=7.0.0"
shopifyapi = ">=12.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"